--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_next">Next Track</string>
     <string name="action_cancel">Cancel Track</string>
     <string name="action_play_pause">Play/Pause Track</string>
+    <string name="action_toggle_favorite">Fav Track</string>
 </resources>
