--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="action_cancel">Cancel Track</string>
     <string name="action_play_pause">Play/Pause Track</string>
     <string name="action_toggle_favorite">Fav Track</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
